Increase negative margin to prevent staff/tab overlap on mobile

--- a/app/components/StaffPreview.module.css
+++ b/app/components/StaffPreview.module.css
@@ -14,6 +14,6 @@
     transform: scale(0.6);
     transform-origin: top left;
     width: calc(100% / 0.6);
-    margin-bottom: -70px;
+    margin-bottom: -76px;
   }
 }
